# Rust-Web-App

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/routes/: get.rs  mod.rs
static/: index.html  main.css
static/css/: error.css
static/web/: index.html  main.css  main.js
templates/errors/: not-found.html.tera
versions/#1 - setup/: Cargo.toml
versions/#1 - setup/src/: main.rs
versions/#1 - setup/src/routes/: get.rs  mod.rs
versions/#2 - undefined path/src/: main.rs
versions/#2 - undefined path/src/routes/: errors.rs  get.rs
versions/#2 - undefined path/static/: main.js
versions/#2 - undefined path/templates/: main.html.tera
